samples/_failures_safe/1761407083_a337f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cdaf9a6.c: In function ‘parser_init’:
./samples/SAFE/__tmp_7cdaf9a6.c:164:5: error: expected declaration or statement at end of input
  164 |     parser->current_token = lexer_next_token(lexer);
      |     ^~~~~~
